--- a/index1.css
+++ b/index1.css
@@ -1,11 +1,16 @@
+body {
+    margin: 0;
+}
 div#bigPictureContainer {
     display: flex;
+    height: 80vh;
 }
 div#leftArrow,
 div#rightArrow {
     flex: 1;
     text-align: center;
     display: flex;
+    align-items: center;
 }
 div#leftArrow > i,
 div#rightArrow > i {
@@ -13,7 +18,20 @@ div#rightArrow > i {
 }
 div#bigImage {
     flex: 10;
+    overflow: hidden;
+    display: flex;
+
 }
 div#bigImage > img {
     max-width: 100%;
+    
+    flex: 1;
+}
+div#thumbnailContainer {
+    display: flex;
+    height: 20vh;
+    overflow: hidden;
+}
+img.thumbnail {
+    margin: 1rem;
 }
